tests/NormalTests/paczka1/small_fuzzy/78498168.err
Error in line 4: pgXBOV2pmbO S468 77,8
Error in line 3: S971 S740 56,1
Error in line 10: e70khHr S971 86,4
